--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^20",
