--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "next": "14.1.0",
